<resources>
    <string name="app_name">FlukeApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_new">Add new</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameNew">Name of a Random</string>
    <string name="listRandom">Type by commas or dots</string>
    <string name="AddButtonText">Add</string>
    <string name="AlertTitleDelete">Delete an element?</string>
    <string name="MessageAlert">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="toastFoundMatch">This word already exist</string>
    <string name="TitleRandom">Get a random value</string>
    <string name="fillFields">Fill all the fields</string>
    <string name="TitleResultRandom">You result is: </string>
    <string name="app_color">App color</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="dark">Dark</string>
    <string name="changeStyle">Style was changed </string>
    <string name="pleaseRestart">Please restart app.</string>
    <string name="acceptStyle">Accept style</string>
</resources>
